objects/Step_Forward_Event_Component__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Title__c</fullName>
        <label>Contact Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <defaultValue>&quot;Step Forward Matching Team&quot;</defaultValue>
        <inlineHelpText>Person to ask for at the interview.</inlineHelpText>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_number__c</fullName>
        <defaultValue>&quot;02035422404&quot;</defaultValue>
        <label>Contact Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Duration_of_interview__c</fullName>
        <inlineHelpText>Approximate length of each interview. e.g. 45 minutes</inlineHelpText>
        <label>Duration of interview</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Step_Forward_Job__r.Employer__c</formula>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to cancel the event and update all attached SFAAs status.</inlineHelpText>
        <label>Event Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date_Matching__c</fullName>
        <inlineHelpText>Used for Interviews, and as an override if different from the Event Day Object</inlineHelpText>
        <label>Event Date (Matching)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>Step_Forward_Event_Day__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from the Event Date Object</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <formula>text(Step_Forward_Job__r.Exclusive__c)</formula>
        <label>Exclusive?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_address__c</fullName>
        <label>Interview address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interview_start_and_finish_times__c</fullName>
        <inlineHelpText>Start and finish time for the whole day. e.g. 9:00 to 13:00</inlineHelpText>
        <label>Interview start and finish times</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Difficult_to_match__c</fullName>
        <formula>Step_Forward_Job__r.Job_difficult_to_match__c</formula>
        <inlineHelpText>Matching check this box and reason on SF Job.</inlineHelpText>
        <label>Job Difficult to match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_offer_made_by_employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No offer made by employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Shortlisted_YPs__c</fullName>
        <label>Number of Shortlisted YPs</label>
        <summaryFilterItems>
            <field>Step_Forward_Associate_Attendance__c.Interview_Status__c</field>
            <operation>equals</operation>
            <value>Shortlisted</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Associate_Attendance__c.Step_Forward_Event_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pathway__c</fullName>
        <formula>text(Step_Forward_Job__r.Pathway__c)</formula>
        <label>Pathway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Manager checks this box to alert matching 2 to 3 weeks notice before the date of interview.</inlineHelpText>
        <label>Ready to Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Availability_All_Shortlisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Availability All Shortlisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Account_Owner__c</fullName>
        <formula>Step_Forward_Job__r.SF_Account_Owner__c</formula>
        <label>SF Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Owner_Email__c</fullName>
        <label>SF Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_Interview_slot_and_JD_to_all__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Matching check this box, when all available YPs have allocated time slot.</inlineHelpText>
        <label>Send Interview slot and JD to all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Event_Day__c</fullName>
        <label>Step Forward Event Day</label>
        <referenceTo>Step_Forward_Event_Day__c</referenceTo>
        <relationshipLabel>Step Forward Event Components</relationshipLabel>
        <relationshipName>Step_Forward_Event_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Job_Name__c</fullName>
        <formula>Step_Forward_Job__r.Step_Forward_Job_Name__c</formula>
        <label>Step Forward Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Forward_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Step Forward Job</label>
        <referenceTo>Step_Forward_Job__c</referenceTo>
        <relationshipLabel>Step Forward Event Components</relationshipLabel>
        <relationshipName>Step_Forward_Event_Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successful_Job_offer_accepted__c</fullName>
        <inlineHelpText>Shows all &quot;Successful - Job offer accepted&quot; status from attached SFAA</inlineHelpText>
        <label>Successful - Job offer accepted</label>
        <summaryFilterItems>
            <field>Step_Forward_Associate_Attendance__c.Interview_Status__c</field>
            <operation>equals</operation>
            <value>Successful - Job offer accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Associate_Attendance__c.Step_Forward_Event_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Suggested_number_of_CVs_to_review__c</fullName>
        <inlineHelpText>Account Manager to suggest how many CVs they wish to see</inlineHelpText>
        <label>Suggested number of CVs to review</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Slot_10_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Slot 10: Allocation</label>
        <referenceTo>Step_Forward_Associate_Attendance__c</referenceTo>
        <relationshipLabel>Step Forward Event Components (Time Slot 10: Allocation)</relationshipLabel>
        <relationshipName>Step_Forward_Event_Components9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Slot_10__c</fullName>
        <label>Time Slot 10</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Slot_1_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Slot 1: Allocation</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Records must be related.</errorMessage>
            <filterItems>
                <field>Step_Forward_Associate_Attendance__c.Step_Forward_Event_Component__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Step_Forward_Associate_Attendance__c</referenceTo>
        <relationshipLabel>Step Forward Event Components</relationshipLabel>
        <relationshipName>Step_Forward_Event_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Slot_1__c</fullName>
        <inlineHelpText>Correct Time format examples: 12:30 or 06:13 or 23:59</inlineHelpText>
        <label>Time Slot 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Slot_2_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Slot 2: Allocation</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Records must be related.</errorMessage>
            <filterItems>
                <field>Step_Forward_Associate_Attendance__c.Step_Forward_Event_Component__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Step_Forward_Associate_Attendance__c</referenceTo>
        <relationshipLabel>Step Forward Event Components (Time Slot 2: Allocation)</relationshipLabel>
        <relationshipName>Step_Forward_Event_Components2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Slot_2__c</fullName>
        <inlineHelpText>Correct format examples: 12:30 or 06:13 or 23:59</inlineHelpText>
        <label>Time Slot 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Slot__c</fullName>
        <inlineHelpText>Single Time Slot</inlineHelpText>
        <label>Time Slot</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsuccessful_YP_not_accepted__c</fullName>
        <inlineHelpText>Shows all &quot;Unsuccessful - YP not accepted&quot; status from attached SFAA</inlineHelpText>
        <label>Unsuccessful - YP not accepted</label>
        <summaryFilterItems>
            <field>Step_Forward_Associate_Attendance__c.Interview_Status__c</field>
            <operation>equals</operation>
            <value>Unsuccessful - YP not accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Step_Forward_Associate_Attendance__c.Step_Forward_Event_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YP_CVs_ready_for_review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Matching check this box when SFAAs created.</inlineHelpText>
        <label>YP CVs ready for review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPs_allocated_CVs_to_EMP_reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>MT check this box when all YPs allocated to time slot. 5-7 days before interview date. Alerts AM to send email to EMP.</inlineHelpText>
        <label>YPs allocated - CVs to EMP reminder</label>
        <type>Checkbox</type>
    </fields>
    <label>Step Forward Event Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <columns>Number_of_Shortlisted_YPs__c</columns>
        <columns>Successful_Job_offer_accepted__c</columns>
        <columns>No_offer_made_by_employer__c</columns>
        <columns>Unsuccessful_YP_not_accepted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_NOT_ready_to_MATCH</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Ready_to_Match__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>SFEC-00000002</value>
        </filters>
        <label>MATCH C3 Jobs NOT ready to MATCH</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Successful_Job_offer_accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_Acc</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH .Acc</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_BA1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>Step_Forward_Job_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Business Administration</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH .BA</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_BSS_ACC</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Successful_Job_offer_accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>BSS,ACC</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH-BSS/ACC</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_CBC_only</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>CBC</value>
        </filters>
        <filters>
            <field>Successful_Job_offer_accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH (CBC only)</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_EYE</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>startsWith</operation>
            <value>Early Years Education</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notContain</operation>
            <value>LEYF</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH . EYE</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_Hosp</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Ready_to_Match__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Successful_Job_offer_accepted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>equals</operation>
            <value>Hospitality</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH (Hosp)</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_IT</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>startsWith</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH .IT</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_Leyf</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>contains</operation>
            <value>LEYF</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>startsWith</operation>
            <value>Early Years Education</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Successful_Job_offer_accepted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH . Leyf</label>
    </listViews>
    <listViews>
        <fullName>MATCH_C3_Jobs_ready_to_MATCH_SMDM</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Step_Forward_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SF_Account_Owner__c</columns>
        <columns>Interview_address__c</columns>
        <columns>Employer__c</columns>
        <columns>Event_Cancelled__c</columns>
        <columns>Event_Date_Matching__c</columns>
        <columns>Pathway__c</columns>
        <columns>Suggested_number_of_CVs_to_review__c</columns>
        <columns>YP_CVs_ready_for_review__c</columns>
        <columns>YPs_allocated_CVs_to_EMP_reminder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Match__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Employer__c</field>
            <operation>notEqual</operation>
            <value>Lord Mosca Inc.</value>
        </filters>
        <filters>
            <field>Pathway__c</field>
            <operation>startsWith</operation>
            <value>Social Media &amp; Digital Marketing</value>
        </filters>
        <filters>
            <field>Event_Cancelled__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>MATCH C3 Jobs ready to MATCH . SMDM</label>
    </listViews>
    <nameField>
        <displayFormat>SFEC-{00000000}</displayFormat>
        <label>Step Forward Event Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Forward Event Components</pluralLabel>
    <recordTypes>
        <fullName>All_Day</fullName>
        <active>true</active>
        <label>All Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Time_Slot</fullName>
        <active>true</active>
        <label>Individual Time Slot</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_10_Forced_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_10_Allocation__c)), 
not(Time_Slot_10_Allocation__r.Step_Forward_Event_Component__c= Id))</errorConditionFormula>
        <errorDisplayField>Time_Slot_10_Allocation__c</errorDisplayField>
        <errorMessage>YP must be related to the event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_6_Forced_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_6_Allocation__c)),
not(Time_Slot_6_Allocation__r.Step_Forward_Event_Component__c= Id))</errorConditionFormula>
        <errorDisplayField>Time_Slot_6_Allocation__c</errorDisplayField>
        <errorMessage>YP must be related to the Event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_7_Forced_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_7_Allocation__c)), 
not(Time_Slot_7_Allocation__r.Step_Forward_Event_Component__c= Id))</errorConditionFormula>
        <errorDisplayField>Time_Slot_7_Allocation__c</errorDisplayField>
        <errorMessage>YP must be related to the event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_8_Forced_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_8_Allocation__c)), 
not(Time_Slot_8_Allocation__r.Step_Forward_Event_Component__c= Id))</errorConditionFormula>
        <errorDisplayField>Time_Slot_8_Allocation__c</errorDisplayField>
        <errorMessage>YP must be related to the event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allocation_9_Forced_Filter</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_9_Allocation__c)), 
not(Time_Slot_9_Allocation__r.Step_Forward_Event_Component__c= Id))</errorConditionFormula>
        <errorDisplayField>Time_Slot_9_Allocation__c</errorDisplayField>
        <errorMessage>YP must be related to the event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_1__c)),
or(Not(CONTAINS(Time_Slot_1__c,&quot;:&quot;)),
not(Isnumber(Left(Time_Slot_1__c,2))),
not(Isnumber(Right(Time_Slot_1__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_1__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format10</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_10__c)), 
or(Not(CONTAINS(Time_Slot_10__c,&quot;:&quot;)), 
not(Isnumber(Left(Time_Slot_10__c,2))), 
not(Isnumber(Right(Time_Slot_10__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_10__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format2</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_2__c)), 
or(Not(CONTAINS(Time_Slot_2__c,&quot;:&quot;)), 
not(Isnumber(Left(Time_Slot_2__c,2))), 
not(Isnumber(Right(Time_Slot_2__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_2__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format3</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_3__c)), 
or(Not(CONTAINS(Time_Slot_3__c,&quot;:&quot;)), 
not(Isnumber(Left(Time_Slot_3__c,2))), 
not(Isnumber(Right(Time_Slot_3__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_3__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format4</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_4__c)), 
or(Not(CONTAINS(Time_Slot_4__c,&quot;:&quot;)), 
not(Isnumber(Left(Time_Slot_4__c,2))), 
not(Isnumber(Right(Time_Slot_4__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_4__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Slot_Format5</fullName>
        <active>true</active>
        <errorConditionFormula>and(not(isblank(Time_Slot_5__c)), 
or(Not(CONTAINS(Time_Slot_5__c,&quot;:&quot;)), 
not(Isnumber(Left(Time_Slot_5__c,2))), 
not(Isnumber(Right(Time_Slot_5__c,2)))))</errorConditionFormula>
        <errorDisplayField>Time_Slot_5__c</errorDisplayField>
        <errorMessage>Wrong time format! Correct Time format examples: 12:30 or 06:13 or 23:59</errorMessage>
    </validationRules>
</CustomObject>